@@ -180,7 +180,7 @@ int
 srch(str)
 char *str;
 {
-        const char *ptr;
+        char *ptr;
         ptr = ip;
 
         while (*ptr && *str) {
