@@ -124,7 +124,7 @@ struct adsym *sp;
 {
         char *ptr;
         int i;
-        const char *ips;
+        char *ips;
 
         ips = ip;
         unget(getnb());
@@ -147,7 +147,7 @@ int
 srch(str)
 char *str;
 {
-        const char *ptr;
+        char *ptr;
         ptr = ip;
 
         while (*ptr && *str) {
